package app.utils;

public class Message {
	public static final String MASTERMIND_TITLE = "----- MASTERMIND -----";
	public static final String ATTEMPS = "attemp(s)";
	public static final String YOU_HAVE_WON = "You have won!!! ;-)";
	public static final String YOU_HAVE_LOST = "You have lost!!! :-(";
	public static final String PROPOSE_A_COMBINATION = "Propose a combination:";
	public static final String DO_YOU_WANT_RESUME = "Resume?";
	public static final String WRONG_COLORS_THEY_MUST_BE = "Wrong colors, they must be: ";
	public static final String WRONG_COMBINATION_LENGTH = "Wrong combination length";
	public static final String WHITES = "whites";
	public static final String BLACKS = "blacks";
	public static final String AND = "and";
	public static final String NEW_BLANK_SPACE = " ";
	public static final String ASTERISK = "*";
	public static final String RIGHT_ARROW = "-->";
}
